Updated the portfolio site

--- a/week 1/index.html
+++ b/week 1/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel=stylesheet href="style.css"/>
     <title>Emeka Allison</title>
 </head>
 <body>
-    <header class="class">
+    <header class="header">
         <!-- Ctr + / Navigation -->
         <nav class="navbar">
-            <h3 class="logo">Emeka </h3>
+            <h3 class="logo">Emeka</h3>
             <ul class="nav-links">
                 <li class="nav-link"><a href="#about">About</a></li>
                 <li class="nav-link"><a href="#work">Work</a></li>
@@ -22,32 +23,36 @@
         <!-- Banner -->
         <section class="banner">
             <h1 class="banner-heading">Hey there, I'm Emeka!</h1>
-            <p class="banner-content">I am a aspiring software engineer, product developer and skills trainer who is passionate about
-                helping people grow and become better.
+            <p class="banner-content">I’m a creative, software engineer, podcaster and skills trainer.
             </p>
         </section>
     </header>
     <main class="main">
         <section id="about" class="main-section">
-            <h2>About</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Incidunt vitae praesentium temporibus laborum doloribus illum labore? 
-                Nulla impedit repellat eum velit saepe atque enim quibusdam itaque officia 
-                quos consectetur praesentium excepturi voluptatem magni, officiis, eos sit! 
-                Facere consequatur hic enim inventore deleniti veritatis nulla officiis aliquam 
-                a accusantium voluptatibus repellendus ab consectetur debitis error exercitationem culpa voluptatem animi ducimus, odio harum accusamus. Fugit qui cumque sint temporibus quaerat, dolores expedita, quisquam tenetur assumenda quasi sequi nemo labore atque quod dolor magnam voluptates est eos officia veniam consequatur, reprehenderit ipsum. Quaerat facilis eveniet vel non exercitationem eaque at tempore vero error?</p>
+            <h2 class="heading">About</h2>
+            <div>
+                <img src="emeka 1.png"/> <!--jpg, png, -->
+                <p>I’m a creative, software engineer, 
+                    podcaster and skills trainer. 
+                    I’m a creative, software engineer, 
+                    podcaster and skills trainer. I’m a creative, software engineer, podcaster and skills trainer. I’m a creative, software engineer, podcaster and skills trainer. I’m a creative, software engineer, podcaster and skills trainer. I’m a creative, software engineer, podcaster and skills trainer. I’m a creative, software engineer, podcaster 
+                    and skills trainer.</p>k
+            </div>
         </section>
         <section id="work" class="main-section">
-            <h2>Work</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Incidunt vitae praesentium temporibus laborum doloribus illum labore? 
-                Nulla impedit repellat eum velit saepe atque enim quibusdam itaque officia 
-                quos consectetur praesentium excepturi voluptatem magni, officiis, eos sit! 
-                Facere consequatur hic enim inventore deleniti veritatis nulla officiis aliquam 
-                a accusantium voluptatibus repellendus ab consectetur debitis error exercitationem culpa voluptatem animi ducimus, odio harum accusamus. Fugit qui cumque sint temporibus quaerat, dolores expedita, quisquam tenetur assumenda quasi sequi nemo labore atque quod dolor magnam voluptates est eos officia veniam consequatur, reprehenderit ipsum. Quaerat facilis eveniet vel non exercitationem eaque at tempore vero error?</p>
+            <h2 class="heading">Work</h2>
+            <div>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Incidunt vitae praesentium temporibus laborum doloribus illum labore? 
+                    Nulla impedit repellat eum velit saepe atque enim quibusdam itaque officia 
+                    quos consectetur praesentium excepturi voluptatem magni, officiis, eos sit! 
+                    Facere consequatur hic enim inventore deleniti veritatis nulla officiis aliquam 
+                    a accusantium voluptatibus repellendus ab consectetur debitis error exercitationem culpa voluptatem animi ducimus, odio harum accusamus. Fugit qui cumque sint temporibus quaerat, dolores expedita, quisquam tenetur assumenda quasi sequi nemo labore atque quod dolor magnam voluptates est eos officia veniam consequatur, reprehenderit ipsum. Quaerat facilis eveniet vel non exercitationem eaque at tempore vero error?</p>
+            </div>
         </section>
         <section id="project" class="main-section">
-            <h2>Projects</h2>
+            <h2 class="heading">Projects</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Incidunt vitae praesentium temporibus laborum doloribus illum labore? 
                 Nulla impedit repellat eum velit saepe atque enim quibusdam itaque officia 
@@ -56,7 +61,7 @@
                 a accusantium voluptatibus repellendus ab consectetur debitis error exercitationem culpa voluptatem animi ducimus, odio harum accusamus. Fugit qui cumque sint temporibus quaerat, dolores expedita, quisquam tenetur assumenda quasi sequi nemo labore atque quod dolor magnam voluptates est eos officia veniam consequatur, reprehenderit ipsum. Quaerat facilis eveniet vel non exercitationem eaque at tempore vero error?</p>
         </section>
         <section id="contact" class="main-section">
-            <h2>Contact</h2>
+            <h2 class="heading">Contact</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Incidunt vitae praesentium temporibus laborum doloribus illum labore? 
                 Nulla impedit repellat eum velit saepe atque enim quibusdam itaque officia 
