Added Profile grid

--- a/week 1/index.html
+++ b/week 1/index.html
@@ -14,7 +14,6 @@
             <ul class="nav-links">
                 <li class="nav-link"><a href="#about">About</a></li>
                 <li class="nav-link"><a href="#work">Work</a></li>
-                <li class="nav-link"><a href="#projects">Project</a></li>
                 <li class="nav-link"><a href="#contact">Contact</a></li>
                 <li class="nav-link"><a href="blog.html">Blog</a></li>
             </ul>
@@ -35,33 +34,42 @@
                 <p>I’m a creative, software engineer, 
                     podcaster and skills trainer. 
                     I’m a creative, software engineer, 
-                    podcaster and skills trainer. I’m a creative, software engineer, podcaster and skills trainer. I’m a creative, software engineer, podcaster and skills trainer. I’m a creative, software engineer, podcaster and skills trainer. I’m a creative, software engineer, podcaster and skills trainer. I’m a creative, software engineer, podcaster 
-                    and skills trainer.</p>k
+                    podcaster and skills trainer. I’m a creative, software engineer, 
+                    podcaster and skills trainer. I’m a creative, software engineer, 
+                    podcaster and skills trainer. I’m a creative, software engineer, 
+                    podcaster and skills trainer. I’m a creative, software engineer, 
+                    podcaster and skills trainer. I’m a creative, software engineer, 
+                    podcaster 
+                    and skills trainer.</p>
             </div>
         </section>
         <section id="work" class="main-section">
             <h2 class="heading">Work</h2>
-            <div>
-
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Incidunt vitae praesentium temporibus laborum doloribus illum labore? 
-                    Nulla impedit repellat eum velit saepe atque enim quibusdam itaque officia 
-                    quos consectetur praesentium excepturi voluptatem magni, officiis, eos sit! 
-                    Facere consequatur hic enim inventore deleniti veritatis nulla officiis aliquam 
-                    a accusantium voluptatibus repellendus ab consectetur debitis error exercitationem culpa voluptatem animi ducimus, odio harum accusamus. Fugit qui cumque sint temporibus quaerat, dolores expedita, quisquam tenetur assumenda quasi sequi nemo labore atque quod dolor magnam voluptates est eos officia veniam consequatur, reprehenderit ipsum. Quaerat facilis eveniet vel non exercitationem eaque at tempore vero error?</p>
-            </div>
-        </section>
-        <section id="project" class="main-section">
-            <h2 class="heading">Projects</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Incidunt vitae praesentium temporibus laborum doloribus illum labore? 
-                Nulla impedit repellat eum velit saepe atque enim quibusdam itaque officia 
-                quos consectetur praesentium excepturi voluptatem magni, officiis, eos sit! 
-                Facere consequatur hic enim inventore deleniti veritatis nulla officiis aliquam 
-                a accusantium voluptatibus repellendus ab consectetur debitis error exercitationem culpa voluptatem animi ducimus, odio harum accusamus. Fugit qui cumque sint temporibus quaerat, dolores expedita, quisquam tenetur assumenda quasi sequi nemo labore atque quod dolor magnam voluptates est eos officia veniam consequatur, reprehenderit ipsum. Quaerat facilis eveniet vel non exercitationem eaque at tempore vero error?</p>
+            <p>I make interesting art</p>
+            <article class="grid">
+                <div class="img-container">
+                    <img src="Rectangle 1.png" alt="Exhibit one" title="Exhibit one" class="exhibit-image"/>
+                </div>
+                <div class="img-container">
+                    <img src="Rectangle 2.png" alt="Exhibit one" title="Exhibit one" class="exhibit-image"/>
+                </div>
+                <div class="img-container">
+                    <img src="Rectangle 3.png" alt="Exhibit one" title="Exhibit one" class="exhibit-image"/>
+                </div>
+                <div class="img-container">
+                    <img src="Rectangle 4.png" alt="Exhibit one" title="Exhibit one" class="exhibit-image"/>
+                </div>
+                <div class="img-container">
+                    <img src="Rectangle 5.png" alt="Exhibit one" title="Exhibit one" class="exhibit-image"/>
+                </div>
+                <div class="img-container">
+                    <img src="Rectangle 6.png" alt="Exhibit one" title="Exhibit one" class="exhibit-image"/>
+                </div>
+            </article>
         </section>
         <section id="contact" class="main-section">
             <h2 class="heading">Contact</h2>
+            <!-- Contact form -->
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Incidunt vitae praesentium temporibus laborum doloribus illum labore? 
                 Nulla impedit repellat eum velit saepe atque enim quibusdam itaque officia 
