Created tic-tac-toe game

--- a/week 1/index.html
+++ b/week 1/index.html
@@ -3,21 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Profile page of Emeka Allison">
     <link rel=stylesheet href="style.css"/>
     <title>Emeka Allison</title>
 </head>
 <body>
     <header class="header">
         <!-- Ctr + / Navigation -->
-        <nav class="navbar">
+        <nav class="navbar" aria-roledescription="Navbar">
             <h3 class="logo">Emeka</h3>
-            <ul class="nav-links">
+            <ul class="nav-links" aria-roledescription="navigation" role="navigation">
                 <li class="nav-link"><a href="#about">About</a></li>
                 <li class="nav-link"><a href="#work">Work</a></li>
                 <li class="nav-link"><a href="#contact">Contact</a></li>
                 <li class="nav-link"><a href="blog.html">Blog</a></li>
             </ul>
-            <button class="toggle-button">Menu</button>
+            <button class="toggle-button" aria-roledescription="navigation menu button">Menu</button>
         </nav>
         <!-- Banner -->
         <section class="banner">
@@ -30,7 +31,7 @@
         <section id="about" class="main-section">
             <h2 class="heading">About</h2>
             <div>
-                <img src="emeka 1.png"/> <!--jpg, png, -->
+                <img src="emeka 1.png" alt="Profile picture of me"/> <!--jpg, png, -->
                 <p>I’m a creative, software engineer, 
                     podcaster and skills trainer. 
                     I’m a creative, software engineer, 
