--- a/week 1/index.html
+++ b/week 1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Profile page of Emeka Allison">
-    <link rel=stylesheet href="style.css"/>
+    <link rel=stylesheet href="css/style.css"/>
     <title>Emeka Allison</title>
 </head>
 <body>
@@ -31,7 +31,7 @@
         <section id="about" class="main-section">
             <h2 class="heading">About</h2>
             <div>
-                <img src="emeka 1.png" alt="Profile picture of me"/> <!--jpg, png, -->
+                <img src="img/emeka 1.png" alt="Profile picture of me"/> <!--jpg, png, -->
                 <p>I’m a creative, software engineer, 
                     podcaster and skills trainer. 
                     I’m a creative, software engineer, 
@@ -49,22 +49,31 @@
             <p>I make interesting art</p>
             <article class="grid">
                 <div class="img-container">
-                    <img src="Rectangle 1.png" alt="Exhibit one" title="Exhibit one" class="exhibit-image"/>
+                    <img src="img/Rectangle 1.png" alt="Exhibit one" title="Exhibit one" class="exhibit-image"/>
                 </div>
                 <div class="img-container">
-                    <img src="Rectangle 2.png" alt="Exhibit one" title="Exhibit one" class="exhibit-image"/>
+                    <img src="img/Rectangle 2.png" alt="Exhibit one" title="Exhibit one" class="exhibit-image"/>
                 </div>
                 <div class="img-container">
-                    <img src="Rectangle 3.png" alt="Exhibit one" title="Exhibit one" class="exhibit-image"/>
+                    <img src="img/Rectangle 3.png" alt="Exhibit one" title="Exhibit one" class="exhibit-image"/>
                 </div>
                 <div class="img-container">
-                    <img src="Rectangle 4.png" alt="Exhibit one" title="Exhibit one" class="exhibit-image"/>
+                    <img src="img/Rectangle 4.png" alt="Exhibit one" title="Exhibit one" class="exhibit-image"/>
                 </div>
                 <div class="img-container">
-                    <img src="Rectangle 5.png" alt="Exhibit one" title="Exhibit one" class="exhibit-image"/>
+                    <img src="img/Rectangle 5.png" alt="Exhibit one" title="Exhibit one" class="exhibit-image"/>
                 </div>
                 <div class="img-container">
-                    <img src="Rectangle 6.png" alt="Exhibit one" title="Exhibit one" class="exhibit-image"/>
+                    <img src="img/Rectangle 6.png" alt="Exhibit one" title="Exhibit one" class="exhibit-image"/>
+                </div>
+                <div class="img-container">
+                    <img src="img/Rectangle 7.png" alt="Exhibit one" title="Exhibit one" class="exhibit-image"/>
+                </div>
+                <div class="img-container">
+                    <img src="img/Rectangle 8.png" alt="Exhibit one" title="Exhibit one" class="exhibit-image"/>
+                </div>
+                <div class="img-container">
+                    <img src="img/Rectangle 9.png" alt="Exhibit one" title="Exhibit one" class="exhibit-image"/>
                 </div>
             </article>
         </section>
