Updated blog layout

--- a/week 1/index.html
+++ b/week 1/index.html
@@ -11,7 +11,7 @@
     <header class="header">
         <!-- Ctr + / Navigation -->
         <nav class="navbar" aria-roledescription="Navbar">
-            <h3 class="logo">Emeka</h3>
+            <a href="/"><h3 class="logo">Emeka</h3></a>
             <ul class="nav-links" aria-roledescription="navigation" role="navigation">
                 <li class="nav-link"><a href="#about">About</a></li>
                 <li class="nav-link"><a href="#work">Work</a></li>
