--- a/week 1/index.html
+++ b/week 1/index.html
@@ -88,8 +88,14 @@
                 a accusantium voluptatibus repellendus ab consectetur debitis error exercitationem culpa voluptatem animi ducimus, odio harum accusamus. Fugit qui cumque sint temporibus quaerat, dolores expedita, quisquam tenetur assumenda quasi sequi nemo labore atque quod dolor magnam voluptates est eos officia veniam consequatur, reprehenderit ipsum. Quaerat facilis eveniet vel non exercitationem eaque at tempore vero error?</p>
         </section>
     </main>
-    <footer>
-        
+    <footer class="footer flex">
+        <h4>Emeka Allison &copy; 2020</h4>
+        <ul class="foot-links flex" aria-roledescription="navigation" role="navigation">
+            <li class="foot-link"><a href="#about">Top stories</a></li>
+            <li class="foot-link"><a href="#work">News</a></li>
+            <li class="foot-link"><a href="#contact">Trends</a></li>
+            <li class="foot-link"><a href="blog.html">Forum</a></li>
+        </ul>
     </footer>
 </body>
 </html>
