--- a/week 1/index.html
+++ b/week 1/index.html
@@ -30,7 +30,7 @@
         <section id="about" class="main-section">
             <h2 class="heading">About</h2>
             <div>
-                <img src="emeka 1.png"/> <!--jpg, png, -->
+                <img src="emeka 1.png" class="profile-img"/> <!--jpg, png, -->
                 <p>I’m a creative, software engineer, 
                     podcaster and skills trainer. 
                     I’m a creative, software engineer, 
@@ -45,25 +45,25 @@
         </section>
         <section id="work" class="main-section">
             <h2 class="heading">Work</h2>
-            <p>I make interesting art</p>
+            <p class="text-center">I make interesting art</p>
             <article class="grid">
                 <div class="img-container">
-                    <img src="Rectangle 1.png" alt="Exhibit one" title="Exhibit one" class="exhibit-image"/>
+                    <img class="exhibit-image" src="Rectangle 1.png" alt="Exihibit 1"/>
                 </div>
                 <div class="img-container">
-                    <img src="Rectangle 2.png" alt="Exhibit one" title="Exhibit one" class="exhibit-image"/>
+                    <img class="exhibit-image" src="Rectangle 2.png" alt="Exihibit 2"/>
                 </div>
                 <div class="img-container">
-                    <img src="Rectangle 3.png" alt="Exhibit one" title="Exhibit one" class="exhibit-image"/>
+                    <img class="exhibit-image" src="Rectangle 3.png" alt="Exihibit 3"/>
                 </div>
                 <div class="img-container">
-                    <img src="Rectangle 4.png" alt="Exhibit one" title="Exhibit one" class="exhibit-image"/>
+                    <img class="exhibit-image" src="Rectangle 4.png" alt="Exihibit 4"/>
                 </div>
                 <div class="img-container">
-                    <img src="Rectangle 5.png" alt="Exhibit one" title="Exhibit one" class="exhibit-image"/>
+                    <img class="exhibit-image" src="Rectangle 5.png" alt="Exihibit 5"/>
                 </div>
                 <div class="img-container">
-                    <img src="Rectangle 6.png" alt="Exhibit one" title="Exhibit one" class="exhibit-image"/>
+                    <img class="exhibit-image" src="Rectangle 6.png" alt="Exihibit 6"/>
                 </div>
             </article>
         </section>
