--- a/week 1/index.html
+++ b/week 1/index.html
@@ -16,7 +16,7 @@
                 <li class="nav-link"><a href="#about">About</a></li>
                 <li class="nav-link"><a href="#work">Work</a></li>
                 <li class="nav-link"><a href="#contact">Contact</a></li>
-                <li class="nav-link"><a href="blog.html">Blog</a></li>
+                <li class="nav-link"><a href="/blog">Blog</a></li>
             </ul>
             <button class="toggle-button" aria-roledescription="navigation menu button">Menu</button>
         </nav>
